--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@react-navigation/native-stack": "^7.1.7",
     "axios": "^1.7.8",
+    "date-fns": "^4.1.0",
     "expo": "~52.0.11",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
-    "react-native": "0.76.3"
+    "react-native": "0.76.3",
+    "react-native-element-dropdown": "^2.12.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
